[package]
name = "zuicon-mdl2"
version = "0.1.0"
authors = ["Xu Shaohua <shaohua@biofan.org>"]
homepage = "https://github.com/RustVis/zu"
repository = "https://github.com/RustVis/zu"
documentation = "https://docs.rs/zuicon-mdl2"
description = "Wrapper of fluentui icons for yew framework"
keywords = ["web", "webasm", "icons"]
categories = ["gui", "wasm", "web-programming"]
build = "build.rs"
edition = "2021"
license = "LGPL-3.0"
publish = true

[dependencies]
yew = "0.20.0"

[build-dependencies]
inflections = "1.1.1"
zu-util = { path="../zu-util", version="0.3.3", features=["icon"] }

[features]
default = []
AcceptIcon = []
AcceptMediumIcon = []
AccessLogoIcon = []
AccessibiltyCheckerIcon = []
AccountActivityIcon = []
AccountBrowserIcon = []
AccountManagementIcon = []
AccountsIcon = []
ActionCenterIcon = []
ActivateOrdersIcon = []
ActivityFeedIcon = []
AddBookmarkIcon = []
AddEventIcon = []
AddFavoriteFillIcon = []
AddFavoriteIcon = []
AddFriendIcon = []
AddGroupIcon = []
AddHomeIcon = []
AddIcon = []
AddInIcon = []
AddLinkIcon = []
AddNotesIcon = []
AddOnlineMeetingIcon = []
AddPhoneIcon = []
AddReactionIcon = []
AddSpaceAfterIcon = []
AddSpaceBeforeIcon = []
AddToIcon = []
AddToShoppingListIcon = []
AddWorkIcon = []
AirTicketsIcon = []
AirplaneIcon = []
AirplaneSolidIcon = []
AlarmClockIcon = []
AlbumIcon = []
AlbumRemoveIcon = []
AlertSettingsIcon = []
AlertSolidIcon = []
AlignCenterIcon = []
AlignHorizontalCenterIcon = []
AlignHorizontalLeftIcon = []
AlignHorizontalRightIcon = []
AlignJustifyIcon = []
AlignLeftIcon = []
AlignRightIcon = []
AlignVerticalBottomIcon = []
AlignVerticalCenterIcon = []
AlignVerticalTopIcon = []
AllAppsIcon = []
AllAppsMirroredIcon = []
AllCurrencyIcon = []
AltTextIcon = []
AmazonWebServicesLogoIcon = []
AnalyticsQueryIcon = []
AnalyticsReportIcon = []
AnalyticsViewIcon = []
AnchorLockIcon = []
AndroidLogoIcon = []
AnnotationIcon = []
ApacheIvyLogo32icon = []
ApacheMavenLogoIcon = []
ArchiveIcon = []
ArchiveUndoIcon = []
AreaChartIcon = []
ArrangeBringForwardIcon = []
ArrangeBringToFrontIcon = []
ArrangeByFromIcon = []
ArrangeSendBackwardIcon = []
ArrangeSendToBackIcon = []
ArrivalsIcon = []
ArrowDownRight8icon = []
ArrowDownRightMirrored8icon = []
ArrowTallDownLeftIcon = []
ArrowTallDownRightIcon = []
ArrowTallUpLeftIcon = []
ArrowTallUpRightIcon = []
ArrowUpRight8icon = []
ArrowUpRightIcon = []
ArrowUpRightMirrored8icon = []
ArticlesIcon = []
AscendingIcon = []
AspectRatioIcon = []
AssessmentGroupIcon = []
AssessmentGroupTemplateIcon = []
AssetLibraryIcon = []
AssignIcon = []
AssignPolicyIcon = []
AsteriskIcon = []
AsteriskSolidIcon = []
AttachIcon = []
AustralianRulesIcon = []
AutoDeploySettingsIcon = []
AutoEnhanceOffIcon = []
AutoEnhanceOnIcon = []
AutoFillTemplateIcon = []
AutoFitContentsIcon = []
AutoFitWindowIcon = []
AutoHeightIcon = []
AutoRacingIcon = []
AutomateFlowIcon = []
AwayStatusIcon = []
BackIcon = []
BackToWindowIcon = []
BackgroundColorIcon = []
BacklogBoardIcon = []
BacklogIcon = []
BacklogListIcon = []
BadgeIcon = []
BalloonsIcon = []
BankIcon = []
BankSolidIcon = []
BarChart4icon = []
BarChartHorizontalIcon = []
BarChartVerticalEditIcon = []
BarChartVerticalFillIcon = []
BarChartVerticalFilterIcon = []
BarChartVerticalFilterSolidIcon = []
BarChartVerticalIcon = []
BaseballIcon = []
BeerMugIcon = []
BidashboardIcon = []
BidiLtrIcon = []
BidiRtlIcon = []
BirthdayCakeIcon = []
BitbucketLogo32icon = []
BlobStorageIcon = []
BlockContactIcon = []
Blocked12icon = []
Blocked2icon = []
Blocked2solidIcon = []
BlockedIcon = []
BlockedSiteIcon = []
BlockedSiteSolid12icon = []
BlockedSolidIcon = []
BlogIcon = []
BlowingSnowIcon = []
BlurIcon = []
BoardsIcon = []
BoldIcon = []
BookAnswersIcon = []
BookmarkReportIcon = []
BookmarksIcon = []
BookmarksMirroredIcon = []
BorderDashIcon = []
BorderDotIcon = []
BoxAdditionSolidIcon = []
BoxCheckmarkSolidIcon = []
BoxLogoIcon = []
BoxMultiplySolidIcon = []
BoxPlaySolidIcon = []
BoxSubtractSolidIcon = []
BranchCommitIcon = []
BranchCompareIcon = []
BranchFork2icon = []
BranchForkIcon = []
BranchLockedIcon = []
BranchMergeIcon = []
BranchPullRequestIcon = []
BranchSearchIcon = []
BranchShelvesetIcon = []
BreadcrumbIcon = []
BreakfastIcon = []
BrightnessIcon = []
BroomIcon = []
BrowserScreenShotIcon = []
BrowserTabIcon = []
BrowserTabScreenshotIcon = []
BrunchIcon = []
BrushIcon = []
BucketColorFillIcon = []
BucketColorIcon = []
BufferTimeAfterIcon = []
BufferTimeBeforeIcon = []
BufferTimeBothIcon = []
BugBlockIcon = []
BugIcon = []
BugSolidIcon = []
BugSyncIcon = []
BuildDefinitionIcon = []
BuildIcon = []
BuildIssueIcon = []
BuildQueueIcon = []
BuildQueueNewIcon = []
BulkUploadIcon = []
BulletedList2icon = []
BulletedList2mirroredIcon = []
BulletedListBulletIcon = []
BulletedListBulletMirroredIcon = []
BulletedListIcon = []
BulletedListMirroredIcon = []
BulletedListTextIcon = []
BulletedListTextMirroredIcon = []
BulletedTreeListIcon = []
BullseyeIcon = []
BullseyeTargetEditIcon = []
BullseyeTargetIcon = []
BusIcon = []
BusSolidIcon = []
BusinessHoursSignIcon = []
ButtonControlIcon = []
CafeIcon = []
CakeIcon = []
CalculatorAdditionIcon = []
CalculatorDeltaIcon = []
CalculatorEqualToIcon = []
CalculatorGroupIcon = []
CalculatorIcon = []
CalculatorMultiplyIcon = []
CalculatorNotEqualToIcon = []
CalculatorPercentageIcon = []
CalculatorSubtractIcon = []
CalendarAgendaIcon = []
CalendarDayIcon = []
CalendarIcon = []
CalendarMirroredIcon = []
CalendarReplyIcon = []
CalendarSettingsIcon = []
CalendarSettingsMirroredIcon = []
CalendarWeekIcon = []
CalendarWorkWeekIcon = []
CalendarYearIcon = []
CaloriesAddIcon = []
CaloriesIcon = []
CameraIcon = []
CampaignTemplateIcon = []
CancelIcon = []
CannedChatIcon = []
CarIcon = []
CaretBottomLeftCenter8icon = []
CaretBottomLeftSolid8icon = []
CaretBottomRightCenter8icon = []
CaretBottomRightSolid8icon = []
CaretDown8icon = []
CaretDownSolid8icon = []
CaretHollowIcon = []
CaretHollowMirroredIcon = []
CaretLeft8icon = []
CaretLeftSolid8icon = []
CaretRight8icon = []
CaretRightIcon = []
CaretRightSolid8icon = []
CaretSolid16icon = []
CaretSolidDownIcon = []
CaretSolidIcon = []
CaretSolidLeftIcon = []
CaretSolidMirroredIcon = []
CaretSolidRightIcon = []
CaretSolidUpIcon = []
CaretTopLeftCenter8icon = []
CaretTopLeftSolid8icon = []
CaretTopRightCenter8icon = []
CaretTopRightSolid8icon = []
CaretUp8icon = []
CaretUpSolid8icon = []
CatIcon = []
CellPhoneIcon = []
CertificateIcon = []
CertifiedDatabaseIcon = []
ChangeEntitlementsIcon = []
ChartIcon = []
ChartSeriesIcon = []
ChartTemplateIcon = []
ChartXangleIcon = []
ChartYangleIcon = []
ChatBotIcon = []
ChatIcon = []
ChatInviteFriendIcon = []
ChatSolidIcon = []
CheckListCheckIcon = []
CheckListCheckMirroredIcon = []
CheckListIcon = []
CheckListTextIcon = []
CheckListTextMirroredIcon = []
CheckMarkIcon = []
CheckboxCompositeIcon = []
CheckboxCompositeReversedIcon = []
CheckboxFillIcon = []
CheckboxIcon = []
CheckboxIndeterminateIcon = []
CheckedOutByOther12icon = []
CheckedOutByYou12icon = []
ChevronDownEnd6icon = []
ChevronDownIcon = []
ChevronDownMedIcon = []
ChevronDownSmallIcon = []
ChevronFold10icon = []
ChevronLeftEnd6icon = []
ChevronLeftIcon = []
ChevronLeftMedIcon = []
ChevronLeftSmallIcon = []
ChevronRightEnd6icon = []
ChevronRightIcon = []
ChevronRightMedIcon = []
ChevronRightSmallIcon = []
ChevronUnfold10icon = []
ChevronUpEnd6icon = []
ChevronUpIcon = []
ChevronUpMedIcon = []
ChevronUpSmallIcon = []
ChildofIcon = []
ChopsticksIcon = []
ChromeBackIcon = []
ChromeBackMirroredIcon = []
ChromeCloseIcon = []
ChromeFullScreenIcon = []
ChromeMinimizeIcon = []
ChromeRestoreIcon = []
ChronosLogoIcon = []
CircleAdditionIcon = []
CircleAdditionSolidIcon = []
CircleFillIcon = []
CircleHalfFullIcon = []
CirclePauseIcon = []
CirclePauseSolidIcon = []
CirclePlusIcon = []
CircleRingIcon = []
CircleShapeIcon = []
CircleShapeSolidIcon = []
CircleStopIcon = []
CircleStopSolidIcon = []
CityNext2icon = []
CityNextIcon = []
ClearFilterIcon = []
ClearFormattingAicon = []
ClearFormattingEraserIcon = []
ClearFormattingIcon = []
ClearIcon = []
ClearNightIcon = []
ClearSelectionIcon = []
ClearSelectionMirroredIcon = []
ClipboardListIcon = []
ClipboardListMirroredIcon = []
ClipboardSolidIcon = []
ClockIcon = []
CloneToDesktopIcon = []
ClosePaneIcon = []
ClosePaneMirroredIcon = []
ClosedCaptionIcon = []
CloudWeatherIcon = []
CloudyIcon = []
CocktailsIcon = []
CodeEditIcon = []
CodeIcon = []
CoffeeIcon = []
CoffeeScriptIcon = []
CollapseContentIcon = []
CollapseContentSingleIcon = []
CollapseMenuIcon = []
CollegeFootballIcon = []
CollegeHoopsIcon = []
ColorIcon = []
ColorSolidIcon = []
ColumnIcon = []
ColumnLeftTwoThirdsEditIcon = []
ColumnLeftTwoThirdsIcon = []
ColumnOptionsIcon = []
ColumnRightTwoThirdsEditIcon = []
ColumnRightTwoThirdsIcon = []
ColumnVerticalSectionEditIcon = []
ColumnVerticalSectionIcon = []
CombineIcon = []
ComboboxIcon = []
CommandPromptIcon = []
CommentActiveIcon = []
CommentAddIcon = []
CommentIcon = []
CommentNextIcon = []
CommentPreviousIcon = []
CommentSolidIcon = []
CommentUrgentIcon = []
CommitmentsIcon = []
CommonDataServiceCdsicon = []
CommunicationsIcon = []
CompanyDirectoryIcon = []
CompanyDirectoryMirroredIcon = []
CompareIcon = []
CompareUnevenIcon = []
CompassNwicon = []
CompletedIcon = []
CompletedSolidIcon = []
ComplianceAuditIcon = []
ConfigurationSolidIcon = []
ConnectContactsIcon = []
ConnectVirtualMachineIcon = []
ConstructionConeIcon = []
ConstructionConeSolidIcon = []
ContactCardIcon = []
ContactCardSettingsIcon = []
ContactCardSettingsMirroredIcon = []
ContactHeartIcon = []
ContactIcon = []
ContactInfoIcon = []
ContactLinkIcon = []
ContactListIcon = []
ContactLockIcon = []
ContentFeedIcon = []
ContentSettingsIcon = []
ContextMenuIcon = []
ContrastIcon = []
CopyEditIcon = []
CopyIcon = []
CottonIcon = []
CouponIcon = []
CplusPlusIcon = []
CplusPlusLanguageIcon = []
CreateMailRuleIcon = []
CricketIcon = []
CrmprocessesIcon = []
CrmreportIcon = []
CrmservicesIcon = []
CropIcon = []
CrownIcon = []
CrownSolidIcon = []
Cssicon = []
CubeShapeIcon = []
CubeShapeSolidIcon = []
CurrencyIcon = []
CustomListIcon = []
CustomListMirroredIcon = []
CustomizeToolbarIcon = []
CutIcon = []
CyclingIcon = []
DashboardAddIcon = []
DataConnectionLibraryIcon = []
DataManagementSettingsIcon = []
DatabaseIcon = []
DatabaseSyncIcon = []
DatabaseViewIcon = []
DataflowsIcon = []
DataflowsLinkIcon = []
DateTime12icon = []
DateTime2icon = []
DateTimeIcon = []
DateTimeMirroredIcon = []
DeactivateOrdersIcon = []
DecimalsIcon = []
DecisionSolidIcon = []
DeclineCallIcon = []
DecreaseIndentArrowIcon = []
DecreaseIndentArrowMirroredIcon = []
DecreaseIndentIcon = []
DecreaseIndentLegacyIcon = []
DecreaseIndentMirroredIcon = []
DecreaseIndentTextIcon = []
DecreaseIndentTextMirroredIcon = []
DefaultRatioIcon = []
DefectSolidIcon = []
DeleteColumnsIcon = []
DeleteIcon = []
DeleteRowsIcon = []
DeleteRowsMirroredIcon = []
DeleteTableIcon = []
DeliveryTruckIcon = []
DependencyAddIcon = []
DependencyRemoveIcon = []
DeployIcon = []
DescendingIcon = []
DesignIcon = []
DesktopScreenshotIcon = []
DeveloperToolsIcon = []
DeviceBugIcon = []
DeviceOffIcon = []
DeviceRunIcon = []
Devices2icon = []
Devices3icon = []
Devices4icon = []
DiagnosticDataBarTooltipIcon = []
DiagnosticIcon = []
DialpadIcon = []
DiamondIcon = []
DiamondSolidIcon = []
DictionaryIcon = []
DictionaryRemoveIcon = []
DietPlanNotebookIcon = []
DiffInlineIcon = []
DiffSideBySideIcon = []
DisableUpdatesIcon = []
DisconnectVirtualMachineIcon = []
DislikeIcon = []
DislikeSolidIcon = []
DistributeDownIcon = []
DocLibraryIcon = []
DockLeftIcon = []
DockLeftMirroredIcon = []
DockRightIcon = []
DockerLogoIcon = []
DocumentApprovalIcon = []
DocumentIcon = []
DocumentManagementIcon = []
DocumentReplyIcon = []
DocumentSearchIcon = []
DocumentSetIcon = []
DocumentationIcon = []
Domicon = []
DonutChartIcon = []
DoorIcon = []
DoubleBookmarkIcon = []
DoubleChevronDown12icon = []
DoubleChevronDown8icon = []
DoubleChevronDownIcon = []
DoubleChevronLeft12icon = []
DoubleChevronLeft8icon = []
DoubleChevronLeftIcon = []
DoubleChevronLeftMedIcon = []
DoubleChevronLeftMedMirroredIcon = []
DoubleChevronRight12icon = []
DoubleChevronRight8icon = []
DoubleChevronRightIcon = []
DoubleChevronUp12icon = []
DoubleChevronUp8icon = []
DoubleChevronUpIcon = []
DoubleColumnEditIcon = []
DoubleColumnIcon = []
DoubleDownArrowIcon = []
DownIcon = []
DownloadDocumentIcon = []
DownloadIcon = []
DragObjectIcon = []
DrillDownIcon = []
DrillDownSolidIcon = []
DrillExpandIcon = []
DrillShowIcon = []
DrillThroughIcon = []
DriverOffIcon = []
Drmicon = []
DropIcon = []
DropShapeIcon = []
DropShapeSolidIcon = []
DropboxLogoIcon = []
DropdownIcon = []
DuplicateRowIcon = []
DuststormIcon = []
EDiscoveryIcon = []
EatDrinkIcon = []
EditContactIcon = []
EditCreateIcon = []
EditIcon = []
EditMailIcon = []
EditMirroredIcon = []
EditNoteIcon = []
EditPhotoIcon = []
EditSolid12icon = []
EditSolidMirrored12icon = []
EditStyleIcon = []
EducationIcon = []
EgnyteLogoIcon = []
EllipseIcon = []
EmbedIcon = []
Emiicon = []
Emoji2icon = []
EmojiDisappointedIcon = []
EmojiIcon = []
EmojiNeutralIcon = []
EmojiTabSymbolsIcon = []
EmptyRecycleBinIcon = []
EncryptionIcon = []
EndPointSolidIcon = []
EngineeringGroupIcon = []
EntitlementPolicyIcon = []
EntitlementRedemptionIcon = []
EntryDeclineIcon = []
EntryViewIcon = []
EqualizerIcon = []
EraseToolIcon = []
ErrorBadgeIcon = []
ErrorIcon = []
Event12icon = []
EventAcceptedIcon = []
EventDateIcon = []
EventDateMissed12icon = []
EventDeclinedIcon = []
EventIcon = []
EventInfoIcon = []
EventTentativeIcon = []
EventTentativeMirroredIcon = []
EventToDoLogoIcon = []
ExerciseTrackerIcon = []
ExpandMenuIcon = []
ExploreContentIcon = []
ExploreContentSingleIcon = []
ExploreDataIcon = []
ExportIcon = []
ExportMirroredIcon = []
ExternalBuildIcon = []
ExternalGitIcon = []
ExternalTfvcicon = []
ExternalXamlicon = []
EyeShadowIcon = []
EyedropperIcon = []
F12devToolsIcon = []
FacebookLogoIcon = []
FamilyIcon = []
FangBodyIcon = []
FastForwardEightXicon = []
FastForwardFourXicon = []
FastForwardIcon = []
FastForwardOneFiveXicon = []
FastForwardOneXicon = []
FastForwardPointFiveXicon = []
FastForwardTwoXicon = []
FastModeIcon = []
FaviconIcon = []
FavoriteListIcon = []
FavoriteStarFillIcon = []
FavoriteStarIcon = []
FaxIcon = []
FeedbackIcon = []
FeedbackRequestMirroredSolidIcon = []
FeedbackRequestSolidIcon = []
FeedbackResponseSolidIcon = []
FerryIcon = []
FerrySolidIcon = []
FieldChangedIcon = []
FieldEmptyIcon = []
FieldFilledIcon = []
FieldNotChangedIcon = []
FieldReadOnlyIcon = []
FieldRequiredIcon = []
FileAspxicon = []
FileBugIcon = []
FileCodeIcon = []
FileCommentIcon = []
FileCssicon = []
FileHtmlicon = []
FileImageIcon = []
FileJavaicon = []
FileLessIcon = []
FileOffIcon = []
FilePdbicon = []
FileRequestIcon = []
FileSassIcon = []
FileSqlicon = []
FileSymlinkIcon = []
FileSystemIcon = []
FileTemplateIcon = []
FileYmlicon = []
FilterAscendingIcon = []
FilterDescendingIcon = []
FilterIcon = []
FilterSettingsIcon = []
FilterSolidIcon = []
FiltersIcon = []
FiltersSolidIcon = []
FinancialIcon = []
FinancialMirroredSolidIcon = []
FinancialSolidIcon = []
FingerprintIcon = []
FitPageIcon = []
FitWidthIcon = []
FiveTileGridIcon = []
FixedAssetManagementIcon = []
FixedColumnWidthIcon = []
FlagIcon = []
FlameSolidIcon = []
FlashAutoIcon = []
FlashOffIcon = []
FlashlightIcon = []
FlickDownIcon = []
FlickLeftIcon = []
FlickRightIcon = []
FlickUpIcon = []
FlowChartIcon = []
FlowIcon = []
FlowerIcon = []
FocalPointIcon = []
FocusIcon = []
FocusViewIcon = []
FogIcon = []
FolderFillIcon = []
FolderHorizontalIcon = []
FolderIcon = []
FolderListIcon = []
FolderListMirroredIcon = []
FolderOpenIcon = []
FolderQueryIcon = []
FolderSearchIcon = []
FollowUserIcon = []
FontColorAicon = []
FontColorIcon = []
FontColorSwatchIcon = []
FontDecreaseIcon = []
FontIcon = []
FontIncreaseIcon = []
FontSize2icon = []
FontSizeIcon = []
FooterIcon = []
FormLibraryIcon = []
FormLibraryMirroredIcon = []
FormatPainterIcon = []
ForumIcon = []
ForwardEventIcon = []
ForwardIcon = []
FreezingIcon = []
FrigidIcon = []
FrontCameraIcon = []
FullCircleMaskIcon = []
FullHistoryIcon = []
FullScreenIcon = []
FullViewIcon = []
FullWidthEditIcon = []
FullWidthIcon = []
FunctionalManagerDashboardIcon = []
FunnelChartIcon = []
GameIcon = []
GatherIcon = []
GenerateIcon = []
GenericScanFilledIcon = []
GenericScanIcon = []
Gificon = []
GiftBoxSolidIcon = []
GiftCardIcon = []
GiftboxIcon = []
GiftboxOpenIcon = []
GitForkIcon = []
GitGraphIcon = []
GitHubLogoIcon = []
GitLogoIcon = []
GlassesIcon = []
GlimmerIcon = []
GlobalNavButtonActiveIcon = []
GlobalNavButtonIcon = []
Globe2icon = []
GlobeFavoriteIcon = []
GlobeIcon = []
GoIcon = []
GoMirroredIcon = []
GoToDashboardIcon = []
GolfIcon = []
GoogleDriveLogoBottomBlueIcon = []
GoogleDriveLogoIcon = []
GoogleDriveLogoLeftGreenIcon = []
GoogleDriveLogoRightYellowIcon = []
GotoTodayIcon = []
GradleLogo32icon = []
GreetingCardIcon = []
GridViewLargeIcon = []
GridViewMediumIcon = []
GridViewSmallIcon = []
GripperBarHorizontalIcon = []
GripperBarVerticalIcon = []
GripperDotsVerticalIcon = []
GripperToolIcon = []
GroupIcon = []
GroupListIcon = []
GroupObjectIcon = []
GroupedAscendingIcon = []
GroupedDescendingIcon = []
GroupedListIcon = []
Guidicon = []
GuitarIcon = []
HailDayIcon = []
HailNightIcon = []
HalfAlphaIcon = []
HalfCircleIcon = []
HandsFreeIcon = []
HandwritingIcon = []
HardDriveGroupIcon = []
HardDriveIcon = []
HardDriveLockIcon = []
HardDriveUnlockIcon = []
Header1icon = []
Header2icon = []
Header3icon = []
Header4icon = []
HeaderIcon = []
HeadsetIcon = []
HeadsetSolidIcon = []
HealthIcon = []
HealthRefreshIcon = []
HealthSolidIcon = []
HeartBrokenIcon = []
HeartFillIcon = []
HeartIcon = []
HelpIcon = []
HelpMirroredIcon = []
HexaditeInvestigationCancelIcon = []
HexaditeInvestigationIcon = []
HexaditeInvestigationSemiAutoIcon = []
HexagonIcon = []
Hide2icon = []
Hide3icon = []
HideIcon = []
HighlightIcon = []
HighlightMappedShapesIcon = []
HintTextIcon = []
HistoricalWeatherIcon = []
HistoryIcon = []
HomeDropdownIcon = []
HomeGroupIcon = []
HomeIcon = []
HomeSolidIcon = []
HomeVerifyIcon = []
HorizontalDistributeCenterIcon = []
HorizontalTabKeyIcon = []
HospitalIcon = []
HotelIcon = []
HourGlassIcon = []
IOsappStoreLogoIcon = []
IconSetsFlagIcon = []
IdbadgeIcon = []
IgnoreConversationIcon = []
ImageCrosshairIcon = []
ImageDiffIcon = []
ImageInAricon = []
ImagePixelIcon = []
ImageSearchIcon = []
ImportAllMirroredIcon = []
ImportIcon = []
ImportMirroredIcon = []
ImportantIcon = []
InboxCheckIcon = []
InboxIcon = []
IncidentTriangleIcon = []
IncomingCallIcon = []
IncreaseIndentArrowIcon = []
IncreaseIndentArrowMirroredIcon = []
IncreaseIndentHangingIcon = []
IncreaseIndentHangingMirroredIcon = []
IncreaseIndentIcon = []
IncreaseIndentLegacyIcon = []
IncreaseIndentMirroredIcon = []
IncreaseIndentTextIcon = []
IncreaseIndentTextMirroredIcon = []
IndentFirstLineIcon = []
Info2icon = []
InfoIcon = []
InfoSolidIcon = []
InformationBarriersIcon = []
InkingToolIcon = []
InputAddressIcon = []
InsertColumnsLeftIcon = []
InsertColumnsRightIcon = []
InsertIcon = []
InsertRowsAboveIcon = []
InsertRowsBelowIcon = []
InsertSignatureLineIcon = []
InsertTextBoxIcon = []
InsightsIcon = []
InstallToDriveIcon = []
InstallationIcon = []
InternalInvestigationIcon = []
InternetSharingIcon = []
Ioticon = []
IrmforwardIcon = []
IrmforwardMirroredIcon = []
IrmreplyIcon = []
IrmreplyMirroredIcon = []
IssueSolidIcon = []
IssueTrackingIcon = []
IssueTrackingMirroredIcon = []
ItalicIcon = []
JavaLogoIcon = []
JavaScriptLanguageIcon = []
JenkinsLogoIcon = []
JoinOnlineMeetingIcon = []
Jsicon = []
KeubernetesLogoIcon = []
KeyPhraseExtractionIcon = []
KeyboardClassicIcon = []
KnowledgeArticleIcon = []
LabelIcon = []
LadybugSolidIcon = []
LampIcon = []
LandscapeOrientationIcon = []
LaptopSecureIcon = []
LaptopSelectedIcon = []
LargeGridIcon = []
LearningToolsIcon = []
LeaveIcon = []
LeaveUserIcon = []
LibraryIcon = []
LifesaverIcon = []
LifesaverLockIcon = []
LightIcon = []
LightWeightIcon = []
LightbulbIcon = []
LightningBoltIcon = []
LightningBoltSolidIcon = []
LikeIcon = []
LikeSolidIcon = []
LineChartIcon = []
LineIcon = []
LineSpacingIcon = []
LineStyleIcon = []
LineThicknessIcon = []
Link12icon = []
LinkIcon = []
LinkedDatabaseIcon = []
LinuxLogo32icon = []
ListIcon = []
ListMirroredIcon = []
LiveSiteIcon = []
LocaleLanguageIcon = []
LocationCircleIcon = []
LocationDotIcon = []
LocationFillIcon = []
LocationIcon = []
LocationOutlineIcon = []
Lock12icon = []
LockIcon = []
LockShareIcon = []
LockSolidIcon = []
LogRemoveIcon = []
LookupEntitiesIcon = []
LowerBrightnessIcon = []
MachineLearningIcon = []
MailAlertIcon = []
MailAttachedIcon = []
MailCheckIcon = []
MailFillIcon = []
MailForwardIcon = []
MailForwardMirroredIcon = []
MailIcon = []
MailLowImportanceIcon = []
MailOptionsIcon = []
MailPauseIcon = []
MailReminderIcon = []
MailRepeatIcon = []
MailReplyAllIcon = []
MailReplyAllMirroredIcon = []
MailReplyIcon = []
MailReplyMirroredIcon = []
MailScheduleIcon = []
MailSolidIcon = []
MailTentativeIcon = []
MailTentativeMirroredIcon = []
MailUndeliveredIcon = []
ManagerSelfServiceIcon = []
ManufacturingIcon = []
MapDirectionsIcon = []
MapLayersIcon = []
MapPin12icon = []
MapPinIcon = []
MapPinSolidIcon = []
MarkAsProtectedIcon = []
MarkDownLanguageIcon = []
MarketDownIcon = []
MarketIcon = []
MasterDatabaseIcon = []
MaximumValueIcon = []
MedalIcon = []
MedalSolidIcon = []
MediaAddIcon = []
MediaIcon = []
MedicalIcon = []
MegaphoneIcon = []
MegaphoneSolidIcon = []
MemoIcon = []
MergeDuplicateIcon = []
MergeIcon = []
MessageFillIcon = []
MessageFriendRequestIcon = []
MessageIcon = []
MicOff2icon = []
MicOffIcon = []
MicrophoneIcon = []
MiniContractIcon = []
MiniContractMirroredIcon = []
MiniExpandIcon = []
MiniExpandMirroredIcon = []
MiniLinkIcon = []
MinimumValueIcon = []
MiracastLogoLargeIcon = []
MobileAngledIcon = []
MobileReportIcon = []
MobileSelectedIcon = []
ModelingViewIcon = []
MoneyIcon = []
MoreIcon = []
MoreSportsIcon = []
MoreVerticalIcon = []
MountainClimbingIcon = []
MoveIcon = []
MoveToFolderIcon = []
MoversIcon = []
MultiSelectIcon = []
MultiSelectMirroredIcon = []
MusicInCollectionFillIcon = []
MusicInCollectionIcon = []
MusicNoteIcon = []
MuteChatIcon = []
MyMoviesTvicon = []
MyNetworkIcon = []
Nav2dmapViewIcon = []
NavigateBackIcon = []
NavigateBackMirroredIcon = []
NavigateExternalInlineIcon = []
NavigateForwardIcon = []
NavigateForwardMirroredIcon = []
NavigationFlipperIcon = []
NetworkTowerIcon = []
NewAnalyticsQueryIcon = []
NewFolderIcon = []
NewMailIcon = []
NewTeamProjectIcon = []
NewsIcon = []
NewsSearchIcon = []
NextIcon = []
NonprofitLogo32icon = []
NormalWeightIcon = []
NotExecutedIcon = []
NotImpactedSolidIcon = []
NoteForwardIcon = []
NotePinnedIcon = []
NoteReplyIcon = []
NpmlogoIcon = []
NumberFieldIcon = []
NumberIcon = []
NumberSequenceIcon = []
NumberSymbolIcon = []
NumberedListIcon = []
NumberedListMirroredIcon = []
NumberedListNumberIcon = []
NumberedListNumberMirroredIcon = []
NumberedListTextIcon = []
NumberedListTextMirroredIcon = []
OctagonIcon = []
Oemicon = []
OfficeChatIcon = []
OfficeChatSolidIcon = []
OfflineStorageIcon = []
OfflineStorageSolidIcon = []
OnboardingIcon = []
OpenEnrollmentIcon = []
OpenFileIcon = []
OpenFolderHorizontalIcon = []
OpenInNewTabIcon = []
OpenInNewWindowIcon = []
OpenPaneIcon = []
OpenPaneMirroredIcon = []
OpenSourceIcon = []
OpenWithIcon = []
OpenWithMirroredIcon = []
OrgIcon = []
Orientation2icon = []
OrientationIcon = []
OutOfOfficeIcon = []
PackageIcon = []
PackagesIcon = []
PaddingBottomIcon = []
PaddingIcon = []
PaddingLeftIcon = []
PaddingRightIcon = []
PaddingTopIcon = []
PageAddIcon = []
PageArrowRightIcon = []
PageCheckedOutIcon = []
PageCheckedinIcon = []
PageDataIcon = []
PageEditIcon = []
PageHeaderEditIcon = []
PageHeaderIcon = []
PageIcon = []
PageLeftIcon = []
PageLinkIcon = []
PageListFilterIcon = []
PageListIcon = []
PageListMirroredSolidIcon = []
PageListSolidIcon = []
PageLockIcon = []
PageRemoveIcon = []
PageRightIcon = []
PageSharedIcon = []
PageSolidIcon = []
PanoIndicatorIcon = []
ParachuteIcon = []
ParachuteSolidIcon = []
ParameterIcon = []
ParatureLogoIcon = []
ParkingLocationIcon = []
ParkingLocationMirroredIcon = []
ParkingMirroredSolidIcon = []
ParkingSolidIcon = []
PartlyCloudyDayIcon = []
PartlyCloudyNightIcon = []
PartyLeaderIcon = []
PassiveAuthenticationIcon = []
PasswordFieldIcon = []
PasteAsCodeIcon = []
PasteAsTextIcon = []
PasteIcon = []
PauseIcon = []
PaymentCardIcon = []
Pc1icon = []
Pdficon = []
PenWorkspaceIcon = []
PencilReplyIcon = []
PentagonIcon = []
PeopleAddIcon = []
PeopleAlertIcon = []
PeopleBlockIcon = []
PeopleIcon = []
PeoplePauseIcon = []
PeopleRepeatIcon = []
PermissionsIcon = []
PermissionsSolidIcon = []
PersonalizeIcon = []
PhishingIcon = []
PhoneIcon = []
Photo2addIcon = []
Photo2fillIcon = []
Photo2icon = []
Photo2removeIcon = []
PhotoCollectionIcon = []
PhotoErrorIcon = []
PhotoIcon = []
PhotoVideoMediaIcon = []
PictureCenterIcon = []
PictureFillIcon = []
PictureIcon = []
PictureLibraryIcon = []
PicturePositionIcon = []
PictureStretchIcon = []
PictureTileIcon = []
PieDoubleIcon = []
PieSingleIcon = []
PieSingleSolidIcon = []
PillIcon = []
PinIcon = []
PinSolid12icon = []
PinSolidOff12icon = []
PinnedFillIcon = []
PinnedIcon = []
PinnedSolidIcon = []
PivotChartIcon = []
PlainTextIcon = []
PlanViewIcon = []
PlayIcon = []
PlayResumeIcon = []
PlayReverseIcon = []
PlayReverseResumeIcon = []
PlaySolidIcon = []
PlaybackRate1xIcon = []
PlayerSettingsIcon = []
PlugConnectedIcon = []
PlugDisconnectedIcon = []
PlugIcon = []
PlugSolidIcon = []
Poiicon = []
PoisolidIcon = []
PollResultsIcon = []
PostUpdateIcon = []
PowerButtonIcon = []
PrecipitationIcon = []
PresenceChickletVideoIcon = []
Presentation12icon = []
PresentationIcon = []
PreviewIcon = []
PreviewLinkIcon = []
PreviousIcon = []
PrimaryCalendarIcon = []
PrintIcon = []
PrintfaxPrinterFileIcon = []
ProFootballIcon = []
ProHockeyIcon = []
ProcessMetaTaskIcon = []
ProcessingCancelIcon = []
ProcessingIcon = []
ProcessingPauseIcon = []
ProcessingRunIcon = []
ProductCatalogIcon = []
ProductIcon = []
ProductListIcon = []
ProductReleaseIcon = []
ProductVariantIcon = []
ProductionFloorManagementIcon = []
ProfileSearchIcon = []
ProgressLoopInnerIcon = []
ProgressLoopOuterIcon = []
ProgressRingDotsIcon = []
PromotedDatabaseIcon = []
ProtectRestrictIcon = []
ProtectedDocumentIcon = []
ProvisioningPackageIcon = []
PublicCalendarIcon = []
PublicContactCardIcon = []
PublicContactCardMirroredIcon = []
PublicEmailIcon = []
PublicFolderIcon = []
PublishContentIcon = []
PublishCourseIcon = []
PuzzleIcon = []
Pyicon = []
PythonLanguageIcon = []
PythonLogoBlueIcon = []
PythonLogoYellowIcon = []
QandAicon = []
QandAmirrorIcon = []
QrcodeIcon = []
QuadColumnIcon = []
QuantityIcon = []
QuarterCircleIcon = []
QueryListIcon = []
QuestionnaireIcon = []
QuestionnaireMirroredIcon = []
QuickNoteIcon = []
QuickNoteSolidIcon = []
RadioBtnOffIcon = []
RadioBtnOnIcon = []
RadioBulletIcon = []
RainIcon = []
RainShowersDayIcon = []
RainShowersNightIcon = []
RainSnowIcon = []
RawSourceIcon = []
ReactLogoIcon = []
ReadIcon = []
ReadOutLoudIcon = []
ReadingModeIcon = []
ReadingModeSolidIcon = []
RealEstateIcon = []
ReceiptCheckIcon = []
ReceiptForwardIcon = []
ReceiptReplyIcon = []
ReceiptTentativeIcon = []
ReceiptTentativeMirroredIcon = []
ReceiptUndeliveredIcon = []
RecentIcon = []
Record2icon = []
RecruitmentManagementIcon = []
RectangleShapeIcon = []
RectangleShapeSolidIcon = []
RectangularClippingIcon = []
RecurringEventIcon = []
RecurringTaskIcon = []
RedEye12icon = []
RedEyeIcon = []
RedeployIcon = []
RedoIcon = []
RefreshIcon = []
RegistryEditorIcon = []
RelationshipIcon = []
ReleaseDefinitionIcon = []
ReleaseGateCheckIcon = []
ReleaseGateErrorIcon = []
ReleaseGateIcon = []
ReminderGroupIcon = []
ReminderPersonIcon = []
ReminderTimeIcon = []
RemoteIcon = []
RemoveContentIcon = []
RemoveEventIcon = []
RemoveFilterIcon = []
RemoveFromShoppingListIcon = []
RemoveFromTrashIcon = []
RemoveIcon = []
RemoveLinkChainIcon = []
RemoveLinkIcon = []
RemoveLinkXicon = []
RemoveOccurrenceIcon = []
RenameIcon = []
RenewalCurrentIcon = []
RenewalFutureIcon = []
ReopenPagesIcon = []
RepairIcon = []
RepeatAllIcon = []
RepeatHeaderRowsIcon = []
RepeatOneIcon = []
ReplyAllAltIcon = []
ReplyAllIcon = []
ReplyAllMirroredIcon = []
ReplyAltIcon = []
ReplyIcon = []
ReplyMirroredIcon = []
RepoIcon = []
RepoSolidIcon = []
ReportAddIcon = []
ReportDocumentIcon = []
ReportHackedIcon = []
ReportLibraryIcon = []
ReportLibraryMirroredIcon = []
ReportLockIcon = []
ReportWarningIcon = []
RerunIcon = []
ReservationOrdersIcon = []
ResetDeviceIcon = []
ResetIcon = []
ResponsesMenuIcon = []
ReturnKeyIcon = []
ReturnToSessionIcon = []
RevToggleKeyIcon = []
ReviewRequestMirroredSolidIcon = []
ReviewRequestSolidIcon = []
ReviewResponseSolidIcon = []
ReviewSolidIcon = []
RewindEightXicon = []
RewindFourXicon = []
RewindIcon = []
RewindOneFiveXicon = []
RewindOneXicon = []
RewindPointFiveXicon = []
RewindTwoXicon = []
RibbonIcon = []
RibbonSolidIcon = []
Ricon = []
RightDoubleQuoteIcon = []
RightTriangleIcon = []
RingerIcon = []
RingerOffIcon = []
RingerRemoveIcon = []
RingerSolidIcon = []
RobotIcon = []
RocketIcon = []
RoomIcon = []
Rotate90clockwiseIcon = []
Rotate90counterClockwiseIcon = []
RotateIcon = []
RowsChildIcon = []
RowsGroupIcon = []
RubyGemsLogoIcon = []
RugbyIcon = []
RunningIcon = []
RustLanguageLogoIcon = []
SadIcon = []
SadSolidIcon = []
SaveAllIcon = []
SaveAndCloseIcon = []
SaveAsIcon = []
SaveIcon = []
SaveTemplateIcon = []
SaveToMobileIcon = []
SavingsIcon = []
ScaleUpIcon = []
ScaleVolumeIcon = []
ScatterChartIcon = []
ScheduleEventActionIcon = []
ScopeTemplateIcon = []
ScreenCastIcon = []
ScreenTimeIcon = []
ScriptIcon = []
ScrollUpDownIcon = []
SdcardIcon = []
SearchAndAppsIcon = []
SearchBookmarkIcon = []
SearchCalendarIcon = []
SearchDataIcon = []
SearchIcon = []
SearchIssueIcon = []
SearchIssueMirroredIcon = []
SearchNearbyIcon = []
SecondaryNavIcon = []
SectionIcon = []
SectionsIcon = []
SecurityGroupIcon = []
SeeDoIcon = []
SelectAllIcon = []
SellIcon = []
SemiboldWeightIcon = []
SendIcon = []
SendMirroredIcon = []
SentimentAnalysisIcon = []
SeparatorIcon = []
ServerEnviromentIcon = []
ServerIcon = []
ServerProcessesIcon = []
ServiceOffIcon = []
SetActionIcon = []
SettingsIcon = []
ShakeDeviceIcon = []
ShapeSolidIcon = []
ShapesIcon = []
ShareIcon = []
SharedDatabaseIcon = []
ShareiOsicon = []
ShirtIcon = []
ShopIcon = []
ShopServerIcon = []
ShoppingCartIcon = []
ShoppingCartSolidIcon = []
ShowGridIcon = []
ShowResultsIcon = []
ShowResultsMirroredIcon = []
ShowTimeAsIcon = []
SidePanelIcon = []
SidePanelMirroredIcon = []
SignOutIcon = []
SigninIcon = []
SingleBookmarkIcon = []
SingleBookmarkSolidIcon = []
SingleColumnEditIcon = []
SingleColumnIcon = []
SipmoveIcon = []
SiteScanIcon = []
SixPointStarIcon = []
SizeLegacyIcon = []
SkiResortsIcon = []
SkipBack10icon = []
SkipForward30icon = []
SkypeArrowIcon = []
SkypeCheckIcon = []
SkypeClockIcon = []
SkypeMinusIcon = []
SliderHandleSizeIcon = []
SliderIcon = []
SliderThumbIcon = []
SlideshowIcon = []
SmartGlassRemoteIcon = []
SnapToGridIcon = []
SnoozeIcon = []
SnowIcon = []
SnowShowerDayIcon = []
SnowShowerNightIcon = []
SnowflakeIcon = []
SoccerIcon = []
SortDownIcon = []
SortIcon = []
SortLinesAscendingIcon = []
SortLinesIcon = []
SortUpIcon = []
SourceIcon = []
SpacerIcon = []
SpeakersIcon = []
SpecialEventIcon = []
SpeedHighIcon = []
SpellingIcon = []
SplitIcon = []
SplitObjectIcon = []
SprintIcon = []
SqlanalyticsPoolIcon = []
SquallsIcon = []
SquareShapeIcon = []
SquareShapeSolidIcon = []
StackColumnChartIcon = []
StackIcon = []
StackIndicatorIcon = []
StackedBarChartIcon = []
StackedColumnChart2fillIcon = []
StackedColumnChart2icon = []
StackedLineChartIcon = []
StarburstIcon = []
StarburstSolidIcon = []
StatusCircleBlock2icon = []
StatusCircleBlockIcon = []
StatusCircleCheckmarkIcon = []
StatusCircleErrorXicon = []
StatusCircleExclamationIcon = []
StatusCircleInfoIcon = []
StatusCircleInnerIcon = []
StatusCircleOuterIcon = []
StatusCircleQuestionMarkIcon = []
StatusCircleRingIcon = []
StatusCircleSyncIcon = []
StatusErrorFullIcon = []
StatusTriangleExclamationIcon = []
StatusTriangleIcon = []
StatusTriangleInnerIcon = []
StatusTriangleOuterIcon = []
StepIcon = []
StepInsertIcon = []
StepSharedAddIcon = []
StepSharedIcon = []
StepSharedInsertIcon = []
StockDownIcon = []
StockUpIcon = []
StopIcon = []
StopSolidIcon = []
StopwatchIcon = []
StorageAcountIcon = []
StorageOpticalIcon = []
StoryboardIcon = []
StreamingIcon = []
StreamingOffIcon = []
StreetIcon = []
StreetsideSplitMinimizeIcon = []
StrikethroughIcon = []
SubscribeIcon = []
SubscriptIcon = []
SubstitutionsInIcon = []
SuitcaseIcon = []
SunAddIcon = []
SunQuestionMarkIcon = []
SunnyIcon = []
SuperscriptIcon = []
SurveyQuestionsIcon = []
SvnlogoIcon = []
SwiftLogoIcon = []
SwitchIcon = []
SwitchUserIcon = []
SwitcherStartEndIcon = []
SyncFolderIcon = []
SyncIcon = []
SyncOccurenceIcon = []
SyncStatusIcon = []
SyncStatusSolidIcon = []
SyncToPcicon = []
SystemIcon = []
TabCenterIcon = []
TabIcon = []
TabOneColumnIcon = []
TabThreeColumnIcon = []
TabTwoColumnIcon = []
TableBrandedColumnIcon = []
TableBrandedRowIcon = []
TableComputedIcon = []
TableFirstColumnIcon = []
TableGroupIcon = []
TableHeaderRowIcon = []
TableIcon = []
TableLastColumnIcon = []
TableLinkIcon = []
TableTotalRowIcon = []
TabletIcon = []
TabletModeIcon = []
TabletSelectedIcon = []
TagGroupIcon = []
TagIcon = []
TagSolidIcon = []
TagUnknown12icon = []
TagUnknown12mirrorIcon = []
TagUnknownIcon = []
TagUnknownMirrorIcon = []
TaskGroupIcon = []
TaskGroupMirroredIcon = []
TaskListIcon = []
TaskManagerIcon = []
TaskManagerMirroredIcon = []
TaskSolidIcon = []
TaskboardIcon = []
TaxiIcon = []
TeamFavoriteIcon = []
TeamworkIcon = []
TeethIcon = []
TelemarketerIcon = []
TemporaryUserIcon = []
TennisIcon = []
TestAutoSolidIcon = []
TestBeakerIcon = []
TestBeakerSolidIcon = []
TestCaseIcon = []
TestExploreSolidIcon = []
TestImpactSolidIcon = []
TestParameterIcon = []
TestPlanIcon = []
TestStepIcon = []
TestSuiteIcon = []
TestUserSolidIcon = []
TextAlignBottomIcon = []
TextAlignMiddleIcon = []
TextAlignTopIcon = []
TextBoxIcon = []
TextCalloutIcon = []
TextDocumentEditIcon = []
TextDocumentIcon = []
TextDocumentSettingsIcon = []
TextDocumentSharedIcon = []
TextFieldIcon = []
TextOverflowIcon = []
TextParagraphOptionIcon = []
TextRecognitionIcon = []
TextRotate270degreesIcon = []
TextRotate90degreesIcon = []
TextRotateHorizontalIcon = []
TextRotationIcon = []
ThisPcicon = []
ThreeQuarterCircleIcon = []
ThumbnailViewIcon = []
ThumbnailViewMirroredIcon = []
ThunderstormsIcon = []
TicketIcon = []
Tiles2icon = []
TilesIcon = []
TimeEntryIcon = []
TimePickerIcon = []
TimeSheetIcon = []
TimelineDeliveryIcon = []
TimelineIcon = []
TimelineMatrixViewIcon = []
TimelineProgressIcon = []
TimerIcon = []
ToggleBorderIcon = []
ToggleFilledIcon = []
ToggleLeftIcon = []
ToggleRightIcon = []
ToggleThumbIcon = []
TollIcon = []
ToolboxIcon = []
TotalIcon = []
TouchIcon = []
TouchPointerIcon = []
TrackersIcon = []
TrackersMirroredIcon = []
TrainIcon = []
TrainSolidIcon = []
TransferCallIcon = []
TransitionEffectIcon = []
TransitionIcon = []
TransitionPopIcon = []
TransitionPushIcon = []
TranslateIcon = []
Trending12icon = []
TriangleDown12icon = []
TriangleLeft12icon = []
TriangleRight12icon = []
TriangleShapeIcon = []
TriangleShapeSolidIcon = []
TriangleSolidDown12icon = []
TriangleSolidIcon = []
TriangleSolidLeft12icon = []
TriangleSolidRight12icon = []
TriangleSolidUp12icon = []
TriangleUp12icon = []
TriggerApprovalIcon = []
TriggerAutoIcon = []
TriggerUserIcon = []
TrimEndIcon = []
TrimIcon = []
TrimStartIcon = []
TripleColumnEditIcon = []
TripleColumnIcon = []
TripleColumnWideIcon = []
Trophy2icon = []
Trophy2solidIcon = []
TrophyIcon = []
TurnRightIcon = []
TvmonitorIcon = []
TvmonitorSelectedIcon = []
TwelvePointStarIcon = []
TwitterLogoIcon = []
UmbrellaIcon = []
UnSetColorIcon = []
UnderlineIcon = []
UndoIcon = []
Uneditable2icon = []
Uneditable2mirroredIcon = []
UneditableIcon = []
UneditableMirroredIcon = []
UneditableSolid12icon = []
UneditableSolidMirrored12icon = []
UnfavoriteIcon = []
UngroupObjectIcon = []
UnknownCallIcon = []
UnknownIcon = []
UnknownMirroredIcon = []
UnknownMirroredSolidIcon = []
UnknownSolidIcon = []
UnlockIcon = []
UnlockSolidIcon = []
UnpinIcon = []
UnpublishContentIcon = []
UnstackSelectedIcon = []
UnsubscribeIcon = []
UnsyncFolderIcon = []
UnsyncOccurenceIcon = []
UntagIcon = []
UpIcon = []
UpdateRestoreIcon = []
UpgradeAnalysisIcon = []
UploadIcon = []
UrlblockIcon = []
Usbicon = []
UserEventIcon = []
UserFollowedIcon = []
UserGaugeIcon = []
UserOptionalIcon = []
UserPauseIcon = []
UserRemoveIcon = []
UserSyncIcon = []
UserWarningIcon = []
VacationIcon = []
VaccinationIcon = []
Variable2icon = []
VariableGroupIcon = []
VariableIcon = []
Vbicon = []
VennDiagramIcon = []
VerifiedBrandIcon = []
VerifiedBrandSolidIcon = []
VersionControlPushIcon = []
VerticalDistributeCenterIcon = []
Video360genericIcon = []
VideoIcon = []
VideoLightOffIcon = []
VideoOff2icon = []
VideoOffIcon = []
VideoSearchIcon = []
VideoSolidIcon = []
ViewAll2icon = []
ViewAllIcon = []
ViewDashboardIcon = []
ViewIcon = []
ViewInAricon = []
ViewListGroupIcon = []
ViewListIcon = []
ViewListTreeIcon = []
ViewOriginalIcon = []
VisuallyImpairedIcon = []
VisualsFolderIcon = []
VisualsStoreIcon = []
VivaEngageIcon = []
VoicemailForwardIcon = []
VoicemailIrmicon = []
VoicemailReplyIcon = []
Volume0icon = []
Volume1icon = []
Volume2icon = []
Volume3icon = []
VolumeDisabledIcon = []
WaffleIcon = []
WaitlistConfirmIcon = []
WaitlistConfirmMirroredIcon = []
Warning12icon = []
WarningIcon = []
WarningSolidIcon = []
WavingHandIcon = []
WebComponentsIcon = []
WebEnvironmentIcon = []
WebPublishIcon = []
WebTemplateIcon = []
Webcam2icon = []
Webcam2offIcon = []
WebsiteIcon = []
WeightsIcon = []
WheelchairIcon = []
WifiEthernetIcon = []
WifiWarning4icon = []
WindDirectionIcon = []
WindowEditIcon = []
WinesIcon = []
WipePhoneIcon = []
WorkFlowIcon = []
WorkIcon = []
WorkItemAlertIcon = []
WorkItemBarIcon = []
WorkItemBarSolidIcon = []
WorkItemBugIcon = []
WorkItemIcon = []
WorkforceManagementIcon = []
WorldClockIcon = []
WorldIcon = []
XamarinLogoIcon = []
XboxControllerIcon = []
ZipFolderIcon = []
ZoomIcon = []
ZoomInIcon = []
ZoomOutIcon = []
ZoomToFitIcon = []
