[package]
name = "zuicon-util"
version = "0.1.0"
authors = ["Xu Shaohua <shaohua@biofan.org"]
readme = "README.md"
homepage = "https://github.com/RustVis/zu"
repository = "https://github.com/RustVis/zu"
documentation = "https://docs.rz/zuicon-util"
description = "Utilities for zu icons"
keywords = ["web", "wasm", "javascript"]
categories = ["gui", "wasm", "web-programming"]
edition = "2021"
license = "Apache-2.0"
publish = true
