[package]
name = "zu-material-examples-theme"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
gloo-utils = "0.1.6"
log = "0.4.17"
serde = "1.0.162"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
zu-material = { path = "../../" }

[dependencies.web-sys]
version = "0.3.61"
features = [
  "Document",
  "HtmlInputElement",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]
